--- a/incremental-app/src/app/components/incremental-main/incremental-main.component.html
+++ b/incremental-app/src/app/components/incremental-main/incremental-main.component.html
@@ -1,5 +1,25 @@
-<p>Reservas: {{pesos}} pesos</p>
-<span>Imprimir: </span>
-<button type="button" (click)="buttonPrintPesos(1)" >1 peso</button>
-<button type="button" (click)="buttonPrintPesos(10)" >10 pesos</button>
-<button type="button" (click)="buttonReset()" >Reset</button>
+
+<mat-card class="main-card">
+    <mat-card-header>
+      <div mat-card-avatar class="main-header-image"></div>
+      <mat-card-title>Banco Central</mat-card-title>
+      <mat-card-subtitle>de la República Argentina</mat-card-subtitle>
+    </mat-card-header>
+    
+    <mat-card-content>
+            <p class="subtitle">Reservas</p>
+            <p>Pesos: ${{pesos}}</p>
+            <br>
+    </mat-card-content>
+
+    <mat-card-content>
+        <p class="subtitle">Imprimir</p>
+    </mat-card-content>
+
+    <mat-card-actions>        
+        <p><button type="button" (click)="buttonPrintPesos(1)" mat-raised-button>$1</button></p>
+        <p><button type="button" (click)="buttonPrintPesos(10)" mat-raised-button>$10</button></p>
+        <p><button type="button" (click)="buttonReset()" mat-raised-button>Reset</button></p>        
+    </mat-card-actions>
+  </mat-card>
+  
