Added printer features

--- a/incremental-app/src/app/components/incremental-main/incremental-main.component.css
+++ b/incremental-app/src/app/components/incremental-main/incremental-main.component.css
@@ -1,5 +1,5 @@
 .main-card {
-    max-width: 300px;
+    max-width: 350px;
     margin: 15px;
   }
   
@@ -10,4 +10,8 @@
 
   .subtitle {
     font-weight:bold;
+  }
+
+  .pesos{
+    font-size: x-large;
   }
