Add multiple components and fix display

--- a/incremental-app/src/app/app.component.html
+++ b/incremental-app/src/app/app.component.html
@@ -1,3 +1,44 @@
-<!---->
+<!--
+<app-incremental-main id="app-incremental-main"></app-incremental-main>
 
-<app-incremental-main></app-incremental-main>
+<app-agro-main id="app-agro-main"></app-agro-main>
+
+<app-futbol-main id="app-futbol-main"></app-futbol-main>
+
+
+-->
+<div id="container-main">
+
+    <div id="container-left">
+
+        <div id="container-left-left" class="container-padding">
+            <app-incremental-main id="app-incremental-main"></app-incremental-main>
+        </div>
+        <div id="container-left-right">
+            <div id="container-left-right-top">
+                <div id="container-left-right-top-left" class="container-padding">
+                    <app-estado-main id="app-estado-main"></app-estado-main>
+                </div>
+
+                <div id="container-left-right-top-right">
+                    <div id="container-left-right-top-right-top" class="container-padding"> 
+                        <app-afip-main id="app-afip-main"></app-afip-main>
+                    </div>
+                    <div id="container-left-right-top-right-top" class="container-padding">
+                        <app-futbol-main id="app-futbol-main"></app-futbol-main>
+                    </div>
+                    
+                </div>
+            </div>
+            <div id="container-left-right-bottom" class="container-padding">
+                <app-agro-main id="app-agro-main"></app-agro-main>
+            </div>
+        </div>
+    
+        
+    </div>
+    
+    <div id="container-right">
+    </div>
+
+</div>
