--- a/incremental-app/src/app/components/incremental-main/incremental-main.component.html
+++ b/incremental-app/src/app/components/incremental-main/incremental-main.component.html
@@ -8,7 +8,7 @@
     
     <mat-card-content>
             <p class="subtitle">Reservas </p>
-            <p class="pesos">$ {{pesos}}</p>
+            <p class="pesos">$ {{pesosRounded}}</p>
             <br>
     </mat-card-content>
 
@@ -19,12 +19,14 @@
     <mat-card-actions>        
         <p><button type="button" (click)="buttonPrintPesos(1)" mat-raised-button>$1</button></p>
         <p><button type="button" (click)="buttonPrintPesos(10)" mat-raised-button>$10</button></p>
+        <p><button type="button" (click)="buttonPrintPesos(100)" mat-raised-button>$100</button></p>
         <p><button type="button" (click)="buttonDeleteSave()" mat-raised-button>Reset</button></p>     
     </mat-card-actions>
 
     <div class="printer-section">
         <mat-card-content>
-            <p>Impresora: {{printer.level}}</p>
+            <p class="subtitle">Automatización</p>
+            <p>Impresoras: {{printer.level}}</p>
             <p>Productividad: ${{printer.level}}/seg</p>
         </mat-card-content>
 
