--- a/incremental-app/src/styles.css
+++ b/incremental-app/src/styles.css
@@ -2,3 +2,12 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+html{
+    background-color: rgb(176, 213, 255);
+}
+
+.main-card {
+    min-height: 100%;
+    min-width: 100%;
+  }
