Add new feature "agro" and basic functionality

--- a/incremental-app/src/app/components/afip-main/afip-main.component.html
+++ b/incremental-app/src/app/components/afip-main/afip-main.component.html
@@ -11,6 +11,6 @@
 
 
     <mat-card-actions>        
-        <p><button type="button" mat-raised-button>Cobrar Impuesto Nuevo</button></p>
+        <p><button type="button" mat-raised-button>Cobrar Nuevo Impuesto</button></p>
     </mat-card-actions>
 </mat-card>
