--- a/incremental-app/src/app/components/fmi-main/fmi-main.component.html
+++ b/incremental-app/src/app/components/fmi-main/fmi-main.component.html
@@ -1,1 +1,17 @@
-<p>fmi-main works!</p>
+<mat-card class="main-card">
+    <mat-card-header>
+      <div mat-card-avatar class="main-header-image"></div>
+      <mat-card-title>Fondo Monetario</mat-card-title>
+      <mat-card-subtitle>Internacional</mat-card-subtitle>
+    </mat-card-header>
+    
+    <mat-card-content>
+            <p>Deuda:</p>
+    </mat-card-content>
+
+
+    <mat-card-actions>        
+        <p><button type="button" mat-raised-button>Pedir Prestamo</button></p>
+        <p><button type="button" mat-raised-button>Renegociar Deuda</button></p>
+    </mat-card-actions>
+</mat-card>
