--- a/incremental-app/src/app/app.component.html
+++ b/incremental-app/src/app/app.component.html
@@ -25,7 +25,7 @@
                         <app-afip-main id="app-afip-main"></app-afip-main>
                     </div>
                     <div id="container-left-right-top-right-top" class="container-padding">
-                        <app-futbol-main id="app-futbol-main"></app-futbol-main>
+                        <app-fmi-main id="app-fmi-main"></app-fmi-main>
                     </div>
                     
                 </div>
@@ -39,6 +39,7 @@
     </div>
     
     <div id="container-right">
+        
     </div>
 
 </div>
