--- a/incremental-app/src/app/components/estado-main/estado-main.component.html
+++ b/incremental-app/src/app/components/estado-main/estado-main.component.html
@@ -1,8 +1,8 @@
 <mat-card class="main-card">
     <mat-card-header>
       <div mat-card-avatar class="main-header-image"></div>
-      <mat-card-title>Jefatura de Gabinete</mat-card-title>
-      <mat-card-subtitle>de Ministros</mat-card-subtitle>
+      <mat-card-title>Presidencia de la Nacion</mat-card-title>
+      <mat-card-subtitle>Poder Ejecutivo Nacional</mat-card-subtitle>
     </mat-card-header>
     
     <mat-card-content>
