Fix soy production when service restarts

--- a/incremental-app/src/app/components/estado-main/estado-main.component.html
+++ b/incremental-app/src/app/components/estado-main/estado-main.component.html
@@ -6,8 +6,9 @@
     </mat-card-header>
     
     <mat-card-content>
-            <p>Ministerios:</p>
-            <p>Ñoquis:</p>
+            <p></p>
+            <p>Ministerios: {{ministerio.level}}</p>
+            <p>Ñoquis: {{worker.level}}</p>
     </mat-card-content>
 
 
