--- a/incremental-app/src/app/components/agro-main/agro-main.component.html
+++ b/incremental-app/src/app/components/agro-main/agro-main.component.html
@@ -6,9 +6,12 @@
     </mat-card-header>
 
     <mat-card-content>
-            <p><span>soyQueue: {{soyQueue}} </span></p>
-            <mat-progress-bar mode="determinate" value="{{harvestProgress}}"></mat-progress-bar>
-            <p>harvestProgress: {{harvestProgress}}</p>
+            <p>
+              <span>soyQueue: {{soyQueue}} </span>
+              <span>harvestProgress: {{harvestProgress}} </span>
+            </p>
+            <mat-progress-bar class="mat-progress-bar" mode="determinate" value="{{harvestProgress}}" style="color: yellow;"></mat-progress-bar>
+            
     </mat-card-content>
 
 
@@ -25,7 +28,7 @@
         <span><button type="button" (click)="buttonSubirRetenciones(1)" mat-raised-button>Subir Retenciones</button></span>
       </p>
       <p>
-        <span>harvestSpeed: {{harvestSpeed}} </span>
+        <span>harvestSpeed: {{harvestSpeedSeconds}} segundos </span>
         <span><button type="button" (click)="buttonUpgradeSpeed(1)" mat-raised-button>Upgrade Harvest Speed</button></span>
       </p>
     </mat-card-content>
