--- a/incremental-app/src/app/app.component.html
+++ b/incremental-app/src/app/app.component.html
@@ -39,7 +39,27 @@
     </div>
     
     <div id="container-right">
-        
+        <div id="container-right-top" class="container-padding">
+            <div id="container-right-top-left">
+                <app-futbol-main id="app-futbol-main"></app-futbol-main>
+            </div>
+        </div>
+        <div id="container-right-bottom">
+            <div id="container-right-bottom-left">
+
+            </div>
+            <div id="container-right-bottom-right">
+                <div id="container-right-bottom-right-top"></div>
+                <div id="container-right-bottom-right-bottom">
+                    <div id="container-right-bottom-right-bottom-top">
+
+                    </div>
+                    <div id="container-right-bottom-right-bottom-bottom">
+                        <app-speech-bubble id="app-speech-bubble"></app-speech-bubble>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
 </div>
