--- a/incremental-app/src/app/components/futbol-main/futbol-main.component.html
+++ b/incremental-app/src/app/components/futbol-main/futbol-main.component.html
@@ -1,8 +1,8 @@
-<mat-card class="main-card">
+<mat-card *ngIf="!lockFutbol" class="main-card">
     <mat-card-header>
       <div mat-card-avatar class="main-header-image"></div>
-      <mat-card-title>Asociación de Fútbol</mat-card-title>      
-      <mat-card-subtitle>Argentino</mat-card-subtitle>
+      <mat-card-title>AFA</mat-card-title>      
+      <mat-card-subtitle>Asociación de Fútbol Argentino</mat-card-subtitle>
     </mat-card-header>
     
     <mat-card-content>
@@ -14,3 +14,13 @@
         <p><button type="button" mat-raised-button>Ganar Mundial</button></p>
     </mat-card-actions>
 </mat-card>
+
+<div *ngIf="lockFutbol" class="main-card center-content">
+  <p>
+    
+    <button type="button" (click)="buttonUnlockComponent()" mat-raised-button>
+      <mat-icon aria-hidden="false" aria-label="lock_open" fontIcon="lock_open"></mat-icon>
+      Desbloquear AFA
+    </button>
+  </p>
+</div>
