--- a/incremental-app/src/app/components/incremental-main/incremental-main.component.html
+++ b/incremental-app/src/app/components/incremental-main/incremental-main.component.html
@@ -8,8 +8,8 @@
     
     <mat-card-content>
             <p class="subtitle">Reservas </p>
-            <p class="pesos">$ {{pesosRounded}}</p>
-            <p class="dolares">USD {{dolaresRounded}}</p>
+            <p class="currency">$ {{pesosRounded}}</p>
+            <p class="currency dolares">USD {{dolaresRounded}}</p>
             <br>
     </mat-card-content>
 
@@ -18,24 +18,43 @@
     </mat-card-content>
 
     <mat-card-actions>        
-        <p><button type="button" (click)="buttonPrintPesos(1)" mat-raised-button>$1</button></p>
-        <p><button type="button" (click)="buttonPrintPesos(1000)" mat-raised-button>$100</button></p>
-        <p><button type="button" (click)="buttonPrintPesos(10000000)" mat-raised-button>$10000000</button></p>
-        <p><button type="button" (click)="buttonDeleteSave()" mat-raised-button>Reset</button></p>
+        <p>
+            <button type="button" (click)="buttonPrintPesos()" class="button-main-print" color="primary" mat-raised-button>${{currentBillete}}</button>
+        </p>
     </mat-card-actions>
+
+    <mat-card-actions class="center-button">      
+        <p ><button type="button" [disabled]="!enableUpgradeBillete()" (click)="buttonUpgradeBillete()" color="primary" mat-raised-button>Sacar Nuevo Billete</button></p>
+    </mat-card-actions>
+
+    
 
     <div class="printer-section">
         <mat-card-content>
             <p class="subtitle">Automatización</p>
-            <p>Impresoras: {{printer.level}}</p>
-            <p>Productividad: ${{printer.level}}/seg</p>
+            <p class="upgrade-content">
+                <span>Impresoras: {{printer.level}} </span>
+                <span fxFlex fxLayoutAlign="end center" #tooltip="matTooltip"
+                matTooltip="Precio: ${{printerPrice}}"
+                matTooltipPosition="below"
+                matTooltipHideDelay="0">
+                    <button [disabled]="!enableComprarImpresora()"  type="button" (click)="buttonComprarImpresora()" color="primary" mat-raised-button >+</button>
+                </span>
+            </p>
+            <p>
+                <span>Productividad: <span style="color: green;">${{pesosProduction}}/seg</span> </span>
+                <!--
+                <span><button [disabled]="!enableMejorarImpresoraEff()"  type="button" (click)="buttonMejorarImpresoraEff()" mat-raised-button>+</button></span> 
+                -->
+            </p>
         </mat-card-content>
-
-        <mat-card-actions>        
-            <p><button [disabled]="!enableComprarImpresora()"  type="button" (click)="buttonComprarImpresora(1)" mat-raised-button>Comprar Impresora (${{printerPrice}}) </button></p>
-            <!--<p><button type="button" mat-raised-button>Aumentar Productividad</button></p>-->
-        </mat-card-actions>
     </div>
+
+    <mat-card-actions>      
+        <p><button type="button" (click)="buttonDeleteSave()" mat-raised-button>Reset</button></p>        
+        <p><button type="button" (click)="buttonPrintPesosFixed(1000)" mat-raised-button>$1000</button></p>
+        <p><button type="button" (click)="buttonPrintPesosFixed(10000000)" mat-raised-button>$10000000</button></p>
+    </mat-card-actions>
 
 
   </mat-card>
