--- a/incremental-app/src/styles.css
+++ b/incremental-app/src/styles.css
@@ -4,15 +4,36 @@ html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 html{
-    background-color: rgb(176, 213, 255);
+    background-color: rgb(56, 85, 182);
+    background-image: url("./assets/background.png");
 }
+
+button{
+  color: primary;
+}
+
+.subtitle {
+    font-weight:bold;
+  }  
+
+.currency{
+    font-size: x-large;
+  }
 
 .main-card {
     min-height: 100%;
     min-width: 100%;
 }
 
-.mat-progress-bar{
-    color: rgb(255, 217, 0);
+.upgrade-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.center-content{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
